--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 a {
-  color: red;
+  color: aliceblue;
   text-decoration: none;
 }
 
 body {
   background-color: rgb(69, 78, 78);
 }
+
 
 .App {
   text-align: center;
@@ -28,6 +29,7 @@ body {
   color: aliceblue;
   margin: 1fr;
   padding:5px;
+  height: 15rem;
 }
 
 .home {
