--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 a {
   color: aliceblue;
   text-decoration: none;
+  justify-content: center;
 }
 
 body {
   background-color: rgb(69, 78, 78);
+  max-height: 70vh;
 }
 
 
@@ -22,23 +24,23 @@ body {
   justify-content: space-evenly;
 }
 
-.companyDisplay {
+.testCompanyDisplay {
   border: solid black;
-  width: 12rem;
-  height: 10rem;
+  width: 15rem;
+  height: 12rem;
+  font-size: 3vh;
 }
 
 .footer, .header {
   background-color:rgb(57, 68, 92);
   color: aliceblue;
-  margin: 1fr;
+  margin: 3fr;
   padding:5px;
   height: 15rem;
-  display: flex;
+  /* width: 100%; */
 }
 
 .footer-container {
-  /* background-color: aquamarine; */
   margin: 0 auto;
 }
 
@@ -51,9 +53,9 @@ body {
 .home {
   background-color:slategrey;
   color:aliceblue;
-  height: 35rem;
-  margin-top:1rem;
-  margin-bottom: 1rem;
+  height: 40rem;
+  margin: 1rem;
+  width: 98%;
 }
 
 .nav-container {
@@ -62,18 +64,13 @@ body {
   display: inline;
 }
 
-.testCompanyDisplay {
-  border: solid black;
-  width: 12rem;
-  height: 10rem;
-  margin: 0 auto;
-  margin-top: 5rem;
-}
-
 .professional-links {
   display: flex;
   flex-direction: row;
-  /* align-items: center; */
+  width: 40vh;
+  padding: 3vh;
+  position: relative;
+  left: 39%;
 }
 
 .search {
@@ -81,5 +78,8 @@ body {
   color: crimson;
 }
 
+.stockContainer {
+  padding: 2vh;
+}
 
 
