--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@ a {
 
 body {
   background-color: rgb(69, 78, 78);
-  max-height: 70vh;
 }
 
 
@@ -50,7 +49,11 @@ body {
   margin: 3fr;
   padding:5px;
   height: 15rem;
-  /* width: 100%; */
+  position: relative;
+}
+
+.footer {
+  position: relative;
 }
 
 .footer-container {
@@ -60,16 +63,17 @@ body {
 .header {
   display: flex;
   flex-direction: column;
-  /* font-size: 5vh; */
+  font-size: 1rem;
 }
 
 
 .home {
   background-color:slategrey;
   color:aliceblue;
-  height: 40rem;
+  height: 100vh;
   margin: 1rem;
   width: 98%;
+  border: solid;
 }
 
 .nav-container {
@@ -84,7 +88,7 @@ body {
   width: 40vh;
   padding: 3vh;
   position: relative;
-  left: 39%;
+  left: 37%;
 }
 
 .search {
