--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@ a {
 
 body {
   background-color: rgb(69, 78, 78);
+  /* display: flex;
+  margin: 0  auto;
+  align-content: center;
+  justify-content: center; */
 }
 
 
@@ -38,9 +42,10 @@ body {
 
 .testCompanyDisplay {
   border: solid black;
-  width: 15rem;
-  height: 12rem;
+  width: 20rem;
+  height: 17rem;
   font-size: 3vh;
+  font-size: 30px;
 }
 
 .footer, .header {
@@ -49,11 +54,14 @@ body {
   margin: 3fr;
   padding:5px;
   height: 15rem;
-  position: relative;
+  /* position: fixed; */
+  z-index: 1;
+  /* width: 100%; */
 }
 
 .footer {
-  position: relative;
+  bottom: 0;
+  width: 100%;
 }
 
 .footer-container {
@@ -64,6 +72,8 @@ body {
   display: flex;
   flex-direction: column;
   font-size: 1rem;
+  top: 0;
+  width: 100%;
 }
 
 
@@ -74,6 +84,11 @@ body {
   margin: 1rem;
   width: 98%;
   border: solid;
+  /* position: fixed; */
+}
+
+.mainTitle{
+  font-size: 3rem;
 }
 
 .nav-container {
@@ -94,6 +109,9 @@ body {
 .search {
   background-color: aliceblue;
   color: crimson;
+  width: 20rem;
+  height: 3rem;
+  position: relative;
 }
 
 .stockContainer {
