--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body {
 }
 
 .detailCompanyDisplay {
-  border: solid black;
+  border: solid  aliceblue;
   color: aliceblue;
   width: 25rem;
   height: 28rem;
@@ -38,29 +38,20 @@ body {
 }
 
 .testCompanyDisplay {
-  border: solid black;
+  border: solid  aliceblue;
   width: 20rem;
   height: 17rem;
   font-size: 3vh;
   font-size: 30px;
 }
 
-.footer, .header {
-  background-color:rgb(57, 68, 92);
+.header {
+  background-color:rgb(57, 68, 92, .7);
+  opacity: .9;
   color: aliceblue;
   margin: 3fr;
   padding:5px;
   height: 15rem;
-}
-
-.footer {
-  position: relative;
-  bottom: 0;
-  width: 100%;
-}
-
-.footer-container {
-  margin: 0 auto;
 }
 
 .header {
@@ -68,14 +59,30 @@ body {
   flex-direction: column;
   font-size: 1rem;
   top: 0;
-  width: 100%;
+  background-image: url('https://images.unsplash.com/photo-1518983682921-e8a9e4177988?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1050&q=80');
+  background-size: cover;
+  background-position:center;
 }
 
+
+.footer {
+  position: relative;
+  bottom: 0;
+  background-color:rgb(57, 68, 92);
+  color: aliceblue;
+  margin: 3fr;
+  padding:5px;
+  height: 15rem;
+}
+
+.footer-container {
+  margin: 0 auto;
+}
 
 .home {
   background-color:slategrey;
   color:aliceblue;
-  height: 100vh;
+  height: 120vh;
   margin: 1rem;
   width: 98%;
   border: solid;
@@ -101,14 +108,26 @@ body {
 }
 
 .search {
-  background-color: aliceblue;
-  color: crimson;
-  width: 20rem;
+  width: 30rem;
   height: 3rem;
   position: relative;
   bottom: 25px;
   padding: 5px;
   margin: 10px;
+}
+
+.search-button {
+  background-color: aliceblue;
+  color:slategray;
+  border: solid rgb(57, 68, 92);
+  font-size: 20px;
+}
+
+.search-input {
+  color: slategray;
+  background-color: aliceblue;
+  border: solid rgb(57, 68, 92);
+  font-size: 20px;
 }
 
 .stockContainer {
