--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,9 @@ code {
   font-family: 'Lobster', cursive;
   font-size: 20px;
 }
+
+.loading {
+  font-size: 50px;
+  color: aliceblue;
+  text-align: center;
+}
